test(smoke): multi-signal autoscaling under real Gatling load
Adds GreeterAutoscaleSimulation (Gatling Java DSL) and
a_deployment_scales_up_under_real_gatling_generated_request_rate_load,
which drives real HTTP load at greeter-load-generator, deploys
greeter-provider with an unreachable CPU target and a real request-rate
target, and asserts a genuine second instance gets placed -- proving
the non-CPU signal end to end. This is what surfaced and helped
root-cause the DomainCodec bug fixed alongside this.

QA_FINDINGS.md records the finding, reproduction, and verification.