@@ -1,5 +1,6 @@
 package com.gimle.smoketests;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -591,6 +592,195 @@ class GreeterSmokeTestIT {
     } catch (Exception e) {
       return false;
     }
+  }
+
+  /**
+   * Multi-metric autoscaling (Part C, {@code AutoscaleReconciler}) under real generated load, not a
+   * synthetic stand-in for it: {@code greeter-load-generator} (gimle-examples/) turns every inbound
+   * HTTP request into one real cross-worker fabric call to greeter-provider's {@code Greeter}, and
+   * Gatling ({@code GreeterAutoscaleSimulation}, spawned as its own JVM the same way every other
+   * cluster component here is) drives that HTTP traffic at a real, controlled rate -- so the
+   * request rate {@code AutoscaleReconciler}'s policy reads is greeter-provider's own real,
+   * worker-reported {@code requestRatePerSecond}, produced by genuine external load, all the way
+   * through the real pipeline: worker metrics report (5s) -> agent heartbeat (5s) -> {@code
+   * AutoscaleReconciler}'s own tick (2s) -> {@code DeploymentReconciler} scheduling a real second
+   * instance. The autoscale policy's {@code targetCpuUtilizationPercent} is set deliberately high
+   * (200%, unreachable by this workload) so only the request-rate signal can be what drives the
+   * scale-up -- proving a genuinely non-CPU signal works end to end against a real cluster, not
+   * just CPU (the one signal that predates Part C and every other real-cluster deployment test here
+   * already exercises implicitly).
+   */
+  @Test
+  @Timeout(value = 8, unit = java.util.concurrent.TimeUnit.MINUTES)
+  void a_deployment_scales_up_under_real_gatling_generated_request_rate_load() throws Exception {
+    Path repoRoot = repoRoot();
+    String javaExecutable = javaExecutable();
+    String classpath = System.getProperty("java.class.path");
+
+    SmokeCluster cluster = startCluster(repoRoot, javaExecutable, classpath);
+    String baseUrl = cluster.controlPlaneBaseUrls().get(0);
+
+    Path providerJar =
+        repoRoot.resolve(
+            "gimle-examples/greeter-provider/target/greeter-provider-" + GIMLE_VERSION + ".jar");
+    Path loadGeneratorJar =
+        repoRoot.resolve(
+            "gimle-examples/greeter-load-generator/target/greeter-load-generator-"
+                + GIMLE_VERSION
+                + ".jar");
+    assertTrue(Files.isRegularFile(providerJar), "expected a built jar at " + providerJar);
+    assertTrue(
+        Files.isRegularFile(loadGeneratorJar), "expected a built jar at " + loadGeneratorJar);
+
+    submitDeployment(
+        baseUrl,
+        "greeter-load-generator-deployment",
+        "com.gimle.examples.greeter.loadgen",
+        loadGeneratorJar);
+    await(
+        () -> isActive(baseUrl, "greeter-load-generator-deployment"),
+        Duration.ofSeconds(60),
+        "greeter-load-generator-deployment should reach ACTIVE before any load is generated");
+
+    submitAutoscaleDeployment(
+        baseUrl,
+        "greeter-provider-autoscale-deployment",
+        providerJar,
+        /* minReplicas= */ 1,
+        /* maxReplicas= */ 2,
+        /* targetCpuUtilizationPercent= */ 200,
+        /* targetRequestRatePerSecond= */ 5.0);
+    await(
+        () -> isActive(baseUrl, "greeter-provider-autoscale-deployment"),
+        Duration.ofSeconds(60),
+        "greeter-provider-autoscale-deployment should reach ACTIVE before any load is generated");
+    assertEquals(
+        1,
+        activeInstanceCount(baseUrl, "greeter-provider-autoscale-deployment"),
+        "should start at exactly its declared 1 replica before load begins");
+
+    // Comfortably above the 5.0/s target and sustained well past every stage of the real
+    // pipeline's own cadence (5s worker report + 5s agent heartbeat + 2s reconcile tick) --
+    // generous headroom, not a tight race against those intervals.
+    Process gatling =
+        spawnGatling(
+            javaExecutable,
+            classpath,
+            /* requestsPerSecond= */ 20,
+            /* durationSeconds= */ 60,
+            tempDir.resolve("gatling.log"));
+    processes.add(gatling);
+
+    await(
+        () -> activeInstanceCount(baseUrl, "greeter-provider-autoscale-deployment") >= 2,
+        Duration.ofSeconds(120),
+        "greeter-provider-autoscale-deployment should scale up from 1 to 2 replicas under real"
+            + " Gatling-generated request-rate load, driven purely by the non-CPU"
+            + " targetRequestRatePerSecond signal");
+  }
+
+  private void submitAutoscaleDeployment(
+      String baseUrl,
+      String deploymentName,
+      Path jar,
+      int minReplicas,
+      int maxReplicas,
+      int targetCpuUtilizationPercent,
+      double targetRequestRatePerSecond)
+      throws Exception {
+    String manifest =
+        """
+        name: %s
+        module:
+          name: com.gimle.examples.greeter.provider
+          version: 1.0.0
+        artifactPath: %s
+        replicas: %d
+        autoscale:
+          minReplicas: %d
+          maxReplicas: %d
+          targetCpuUtilizationPercent: %d
+          targetRequestRatePerSecond: %s
+        """
+            .formatted(
+                deploymentName,
+                jar.toAbsolutePath(),
+                minReplicas,
+                minReplicas,
+                maxReplicas,
+                targetCpuUtilizationPercent,
+                targetRequestRatePerSecond);
+    HttpResponse<String> response =
+        httpClient.send(
+            HttpRequest.newBuilder(URI.create(baseUrl + "/deployments/" + deploymentName))
+                .PUT(HttpRequest.BodyPublishers.ofString(manifest, StandardCharsets.UTF_8))
+                .build(),
+            HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+    if (response.statusCode() != 200) {
+      fail(
+          "autoscale deployment submission failed: "
+              + response.statusCode()
+              + " "
+              + response.body());
+    }
+  }
+
+  /** How many of {@code deploymentName}'s real placed instances currently report ACTIVE. */
+  private int activeInstanceCount(String baseUrl, String deploymentName) {
+    try {
+      Map<String, Object> status = deploymentStatus(baseUrl, deploymentName);
+      List<Map<String, Object>> instances = Json.asObjectList(status.get("instances"));
+      int active = 0;
+      for (Map<String, Object> instance : instances) {
+        Object observation = instance.get("observation");
+        if (observation instanceof Map<?, ?> obsMap
+            && "ACTIVE".equals(obsMap.get("lifecycleState"))) {
+          active++;
+        }
+      }
+      return active;
+    } catch (Exception e) {
+      return 0;
+    }
+  }
+
+  /**
+   * Spawns {@code GreeterAutoscaleSimulation} as {@code io.gatling.app.Gatling}'s own CLI, the same
+   * shape every other cluster component in this suite is spawned in (Playwright's own {@code bun
+   * run test:e2e} is the closest precedent: a separate process, a separate toolchain, never
+   * embedded in this JVM). {@code --add-opens java.base/java.lang=ALL-UNNAMED} is a real,
+   * documented Gatling requirement on modern JDKs (its stats writer reflects into {@code
+   * java.lang.String} internals for a fast-path encoder) -- omitting it fails the run immediately
+   * with an {@code IllegalAccessException}, not a silent degradation. {@code -nr} skips HTML report
+   * generation: this test cares about the real side effect (greeter-provider's own worker-reported
+   * request rate rising and the reconciler scaling up in response), not Gatling's own charts.
+   */
+  private Process spawnGatling(
+      String javaExecutable,
+      String classpath,
+      int requestsPerSecond,
+      int durationSeconds,
+      Path logFile)
+      throws IOException {
+    ProcessBuilder pb =
+        new ProcessBuilder(
+            javaExecutable,
+            "--add-opens",
+            "java.base/java.lang=ALL-UNNAMED",
+            "-cp",
+            classpath,
+            "-Dgimle.load.baseUrl=http://127.0.0.1:19077",
+            "-Dgimle.load.requestsPerSecond=" + requestsPerSecond,
+            "-Dgimle.load.durationSeconds=" + durationSeconds,
+            "io.gatling.app.Gatling",
+            "-s",
+            "com.gimle.smoketests.load.GreeterAutoscaleSimulation",
+            "-rf",
+            tempDir.resolve("gatling-results").toString(),
+            "-nr");
+    pb.redirectErrorStream(true);
+    pb.redirectOutput(ProcessBuilder.Redirect.to(logFile.toFile()));
+    return pb.start();
   }
 
   /**
